Make converters work and return correct types